# vox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
vox/: CMakeLists.txt
vox/src/: main.cpp  voxpch.h
vox/src/vox/core/: Application.cpp  Application.h  Ref.h  Window.cpp  Window.h
vox/src/vox/platform/desktop/: DesktopWindow.cpp  DesktopWindow.h
vox/src/vox/platform/vulkan/: VulkanBase.h  VulkanDevice.cpp  VulkanDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderer.cpp  VulkanRenderer.h
vox/src/vox/renderer/: CommandQueue.h  Graphics.cpp  Graphics.h  GraphicsDevice.h  Renderer.cpp  Renderer.h
